--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
   <button id="satellite">Satallite Map</button>
   <button id="street">Street Map</button>
   <button id="oceans">Oceans</button>
-  <div id="mapview" style="width: 60%vw; height: 500px">Map Goes Here</div>
+
+  <div id="mapview" style="width: 60%vw; height: 500px">Loading Map...</div>
   
 <script>
   let map1;
   let map2;
   let map3;
-  let mapview;
+  
 
-  require( ["esri/Map", "esri/views/MapView", "esri/views/SceneView"], 
-    (Map, MapView, map3d) => {
+  require( ["esri/Map", "esri/views/SceneView"], 
+    (Map, SceneView, Request, MapLayer) => {
 
       map1 = new Map({basemap: "satellite"})
       map2 = new Map({basemap:"streets"})
       map3 = new Map({basemap: "oceans"})
-      mapview = new MapView({container: "mapview", map: map1, zoom: 12,
-          center: [35.092777, -21.210822] 
-      });
-      sceneview = new map3d({container: "mapview", map: map1, zoom: 12,
-          center: [35.092777, -21.210822]
-      })
+    
+      let viewoptions = {container: "mapview", map: map1, zoom: 12,
+        center: [35.092777, -21.210822]
+      };
+
+      sceneview = new SceneView(viewoptions);
+   
     }
   );
-  
+
   document.getElementById("satellite").addEventListener('click', () => { sceneview.map = map1 });     
   document.getElementById("street").addEventListener('click', () => { sceneview.map = map2 });
   document.getElementById("oceans").addEventListener('click', () => { sceneview.map = map3 });
